| Bug #6247 | Subqueries return wrong result if NULLs exist | ||
|---|---|---|---|
| Submitted: | 25 Oct 2004 18:17 | Modified: | 7 Dec 2004 21:03 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.1.7-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Bugs System | Target Version: | |
[25 Oct 2004 18:17]
Peter Gulutzan
[18 Nov 2004 17:12]
Oleksandr Byelkin
ChangeSet 1.2118 04/11/18 18:10:07 bell@sanja.is.com.ua +11 -0 reporting empty result added in case of max/min optimisation of ALL/ANY/SOME subqueries fixed null processing in NOT operation used in ALL subquery (Bug #6247)
[7 Dec 2004 21:03]
Oleksandr Byelkin
Thank you for bugreport! Bug is fixed, bugfix is pushed to source repository.
