sql/sql_union.cc
@@ -394,6 +394,8 @@ int st_select_lex_unit::exec()
   
   if (uncacheable || !item || !item->assigned() || describe)
   {
+    if (item)
+      item->reset_value_registration();
     if (optimized && item)
     {
       if (item->assigned())
